XWIKI-20549: Provide a new script service API to check trustfulness of an URI (#2047)
This reverts commits
  * d56fd930a6adeba9b1d870d05bcdaed7891d6aaf
  * 1ea01e4c93a627992a3049e1425e1f422b4449af
  * f1393f94f78ecec06adf3dfda156d27125e7ac79

Purpose of this commit is to re-apply changes previously done